--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -19,7 +19,7 @@ $use-theming: true !default;
 $use-utilities: false !default;
 $use-css-variables: true !default;
 $use-font-smoothing: true !default;
-$use-button-animation: true !default;
+$use-button-animation: false !default;
 
 $defaults: () !default;
 $defaults: map.deep-merge(
