--- a/scss/config/_typography.scss
+++ b/scss/config/_typography.scss
@@ -26,7 +26,7 @@ $headings-color: text-1 !default;
 $headings-font-family: list.join('Montserrat', $_font-sans) !default;
 $headings-font-weight: medium !default;
 
-$inline-text-padding: 0.1875em !default;
+$inline-text-padding: 0.1875em 0.35em !default;
 $inline-text-border-radius: xs !default;
 
 // Fluid
