--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,14 +1,17 @@
+@forward 'badge' as badge-*;
 @forward 'button' as button-*;
 @forward 'card' as card-*;
 @forward 'keyboard' as keyboard-*;
 @forward 'loader' as loader-*;
 @forward 'navbar' as navbar-*;
 
+@use 'badge';
 @use 'button';
 @use 'card';
 @use 'keyboard';
 
 @mixin components {
+  @include badge.styles();
   @include button.styles();
   @include keyboard.styles();
 }
