--- a/scss/components/_tabs.scss
+++ b/scss/components/_tabs.scss
@@ -1,5 +1,5 @@
 // --------------------------------
-//   Tab Components
+//   Tabs Component
 // --------------------------------
 
 @use '../config';
