--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -76,8 +76,8 @@ $shadow: shadow(sm);
   }
 }
 
-// Variant selector
-@mixin variant-color($color) {
+// Color variant selector
+@mixin color-variant($color) {
   &#{$class}--#{$color} {
     @content;
   }
@@ -150,7 +150,7 @@ $shadow: shadow(sm);
     cursor: not-allowed;
   }
 
-  @include variant-color(inverted) {
+  @include color-variant(inverted) {
     --koi-btn-background: #{fill(contrast, 9)};
     --koi-btn-background-hover: #{fill(contrast, 7)};
     --koi-btn-background-active: #{fill(contrast, 9)};
@@ -176,8 +176,8 @@ $shadow: shadow(sm);
 
   border-width: var(--koi-btn-border-width, $border-width);
 
-  // Variant colors
-  @include variant-color(accent) {
+  // Color variants
+  @include color-variant(accent) {
     --koi-btn-background: #{accent(6)};
     --koi-btn-background-hover: #{accent(7)};
     --koi-btn-background-active: #{accent(6)};
@@ -188,8 +188,8 @@ $shadow: shadow(sm);
     @include focus-ring(accent(6));
   }
 
-  @each $color in config.$variant-colors {
-    @include variant-color($color) {
+  @each $color in config.$color-variants {
+    @include color-variant($color) {
       --koi-btn-background: #{fill($color, 6)};
       --koi-btn-background-hover: #{fill($color, 7)};
       --koi-btn-background-active: #{fill($color, 6)};
@@ -226,8 +226,8 @@ $shadow: shadow(sm);
     --koi-btn-background-active: #{fill(contrast, 1)};
   }
 
-  // Variant colors
-  @include variant-color(accent) {
+  // Color variants
+  @include color-variant(accent) {
     --koi-btn-background-hover: #{accent(0)};
     --koi-btn-background-active: transparent;
     --koi-btn-border-color: #{accent(6)};
@@ -251,8 +251,8 @@ $shadow: shadow(sm);
     }
   }
 
-  @each $color in config.$variant-colors {
-    @include variant-color($color) {
+  @each $color in config.$color-variants {
+    @include color-variant($color) {
       --koi-btn-background-hover: #{fill($color, 0)};
       --koi-btn-background-active: transparent;
       --koi-btn-border-color: #{fill($color, 6)};
@@ -303,8 +303,8 @@ $shadow: shadow(sm);
     --koi-btn-background-active: #{fill(contrast, 2, $alpha: 0.5)};
   }
 
-  // Variant colors
-  @include variant-color(accent) {
+  // Color variants
+  @include color-variant(accent) {
     --koi-btn-background: #{accent(1)};
     --koi-btn-background-hover: #{accent(2)};
     --koi-btn-background-active: #{accent(1)};
@@ -324,8 +324,8 @@ $shadow: shadow(sm);
     }
   }
 
-  @each $color in config.$variant-colors {
-    @include variant-color($color) {
+  @each $color in config.$color-variants {
+    @include color-variant($color) {
       --koi-btn-background: #{fill($color, 1)};
       --koi-btn-background-hover: #{fill($color, 2)};
       --koi-btn-background-active: #{fill($color, 1)};
@@ -371,8 +371,8 @@ $shadow: shadow(sm);
     --koi-btn-background-active: #{fill(contrast, 2, $alpha: 0.5)};
   }
 
-  // Variant colors
-  @include variant-color(accent) {
+  // Color variants
+  @include color-variant(accent) {
     --koi-btn-background-hover: #{accent(1)};
     --koi-btn-background-active: #{accent(1, $alpha: 0.5)};
     --koi-btn-foreground: #{accent(7)};
@@ -390,8 +390,8 @@ $shadow: shadow(sm);
     }
   }
 
-  @each $color in config.$variant-colors {
-    @include variant-color($color) {
+  @each $color in config.$color-variants {
+    @include color-variant($color) {
       --koi-btn-background-hover: #{fill($color, 1)};
       --koi-btn-background-active: #{fill($color, 1, $alpha: 0.5)};
       --koi-btn-foreground: #{fill($color, 7)};
@@ -431,8 +431,8 @@ $shadow: shadow(sm);
     text-decoration: underline;
   }
 
-  // Variant colors
-  @include variant-color(accent) {
+  // Color variants
+  @include color-variant(accent) {
     --koi-btn-foreground: #{accent(7)};
     --koi-btn-foreground-hover: #{accent(8)};
     --koi-btn-foreground-active: #{accent(7)};
@@ -446,8 +446,8 @@ $shadow: shadow(sm);
     }
   }
 
-  @each $color in config.$variant-colors {
-    @include variant-color($color) {
+  @each $color in config.$color-variants {
+    @include color-variant($color) {
       --koi-btn-foreground: #{fill($color, 7)};
       --koi-btn-foreground-hover: #{fill($color, 8)};
       --koi-btn-foreground-active: #{fill($color, 7)};
@@ -471,7 +471,7 @@ $shadow: shadow(sm);
   padding: 0;
   width: var(--koi-btn-height, $height);
 
-  @include variant-color(compact) {
+  @include color-variant(compact) {
     height: var(--koi-btn-height-compact, $height-compact);
     width: var(--koi-btn-height-compact, $height-compact);
   }
@@ -483,7 +483,7 @@ $shadow: shadow(sm);
   padding: 0;
   width: var(--koi-btn-height, $height);
 
-  @include variant-color(compact) {
+  @include color-variant(compact) {
     height: var(--koi-btn-height-compact, $height-compact);
     width: var(--koi-btn-height-compact, $height-compact);
   }
