--- a/scss/config/theme/_colors.scss
+++ b/scss/config/theme/_colors.scss
@@ -34,16 +34,16 @@ $base: (
     9: #4c1d95,
   ),
   neutral: (
-    0: #f9fafb,
-    1: #f3f4f6,
-    2: #e5e7eb,
-    3: #d1d5db,
-    4: #9ca3af,
-    5: #6b7280,
-    6: #4b5563,
-    7: #374151,
-    8: #1f2937,
-    9: #111827,
+    0: #fafafa,
+    1: #f5f5f5,
+    2: #e6e6e6,
+    3: #d4d4d4,
+    4: #a3a3a3,
+    5: #737373,
+    6: #525252,
+    7: #404040,
+    8: #262626,
+    9: #171717,
   ),
   white: map.get($colors, white),
   black: map.get($colors, black),
